Fixed https://issues.apache.org/jira/browse/OFBIZ-4005 Buttons are too short in tomhawak with long text Used a single larger sprite image instead of separated ones
git-svn-id: https://svn.apache.org/repos/asf/ofbiz/trunk@1029792 13f79535-47bb-0310-9956-ffa450edef68

--- a/themes/tomahawk/webapp/tomahawk/css/style.css
+++ b/themes/tomahawk/webapp/tomahawk/css/style.css
@@ -1445,39 +1445,39 @@ text-transform:uppercase;
 }
 
 .button-bar ul a.create,.button-bar a.create {
-background: url(../images/ptrn_create.gif) no-repeat;
+background: url(../images/button_sprite.png) no-repeat 0px 0px;
 padding:6px 10px 6px 30px;
 }
 
 .button-bar ul a.create:hover,.button-bar a.create:hover {
-background: url(../images/ptrn_hot_create.gif) no-repeat;
+background: url(../images/button_sprite.png) no-repeat 0px -26px;
 }
 
 .button-bar ul a.delete,.button-bar a.delete {
-background: url(../images/ptrn_delete.jpg) no-repeat;
+background: url(../images/button_sprite.png) no-repeat 0px -52px;
 padding:6px 10px 6px 30px;
 }
 
 .button-bar ul a.delete:hover,.button-bar a.delete:hover {
-background: url(../images/ptrn_hot_delete.jpg) no-repeat;
+background: url(../images/button_sprite.png) no-repeat 0px -78px;
 }
 
 .button-bar ul a.refresh,.button-bar a.refresh {
-background: url(../images/ptrn_refresh.png) no-repeat;
+background: url(../images/button_sprite.png) no-repeat 0px -156px;
 padding:6px 10px 6px 30px;
 }
 
 .button-bar ul a.refresh:hover,.button-bar a.refresh:hover {
-background: url(../images/ptrn_hot_refresh.png) no-repeat;
+background: url(../images/button_sprite.png) no-repeat 0px -182px;
 }
 
 .button-bar ul a.search,.button-bar a.search {
-background: url(../images/ptrn_search.png) no-repeat;
+background: url(../images/button_sprite.png) no-repeat 0px -104px;
 padding:6px 10px 6px 30px;
 }
 
 .button-bar ul a.search:hover,.button-bar a.search:hover {
-background: url(../images/ptrn_hot_search.png) no-repeat;
+background: url(../images/button_sprite.png) no-repeat 0px -130px;
 }
 
 .button-bar ul a:hover,.button-bar a:hover {
